feat/endpoint booking, barber, services
